# pengo

./: CMakeLists.txt  README.md  package.xml
blender_models/: assembly.blend  assembly_updated.blend
camera_movement_controller/: .cproject  .project  CMakeLists.txt  package.xml
camera_movement_controller/src/: camera_movement.cpp  camera_movement_node.cpp
launch/: turtlebot_world.launch
models/Sitting_Man/: model.config  model.sdf
pengo/: CMakeLists.txt  package.xml
pengo_description/: CMakeLists.txt  package.xml
pengo_description/cmake/: turtlebot_descriptionConfig.cmake
pengo_description/meshes/: base.stl
pengo_description/meshes/laptop/: laptop.dae
pengo_description/meshes/stand/: base.dae  fork.dae  plate.dae
pengo_description/robots/: create_circles_asus_xtion_pro.urdf.xacro  create_circles_kinect.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  kobuki_hexagons_realsense.urdf.xacro
pengo_description/test/: test_urdf.cpp
pengo_description/urdf/: stand.urdf.xacro  turtlebot_gazebo.urdf.xacro  turtlebot_gazebo_realsense.urdf.xacro  turtlebot_library.urdf.xacro
pengo_description/urdf/sensors/: asus_xtion_pro.urdf.xacro  asus_xtion_pro_offset.urdf.xacro  kinect.urdf.xacro  realsense.urdf.xacro
pengo_description/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
stacks/: circles.urdf.xacro  hexagons.urdf.xacro
turtlebot/: CMakeLists.txt  package.xml
turtlebot_description/: CMakeLists.txt
world/: office.world  test_1.world
(+35 files in other folders)
