<package>
  <name>pengo_description</name>
  <version>1.0.0</version>
  <description>
     Pengo description. On the base of turtlebot
  </description>
  <maintainer email="michael@cogniteam.com">michael</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>kobuki_description</run_depend>
  <run_depend>create_description</run_depend>
</package>
